correlation by year month in fixed effects

--- a/Feature Builder.ipynb
+++ b/Feature Builder.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 206,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -14,10 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "twitter_dir = 'data/bucket/twitter/'\n",
@@ -28,10 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "influencers = ['BarackObama_sentiment','cnnbrk_sentiment', 'KimKardashian_sentiment', 'Trump_sentiment']\n",
@@ -42,25 +36,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "twitter_important_columns = ['Date','sentiment_score','heuristic_score']\n",
     "news_important_columns = ['Date','sentiment_score','polar_score']\n",
-    "stock_important_columns = ['Date','Change','Direction','Lag 1 Change', 'Lag 1 Direction','Lag 2 Change', 'Lag 2 Direction','Lag 5 Change', 'Lag 5 Direction']\n",
+    "stock_important_columns = ['Date','Change','Direction','Lag 1 Change', 'Lag 1 Direction','Lag 2 Change', 'Lag 2 Direction','Lag 2 Significant','Lag 5 Change', 'Lag 5 Direction']\n",
     "\n",
     "stock_simple_columns = ['Date','Change','Lag 2 Significant']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "first_date = pd.to_datetime('1/1/2015')\n",
@@ -69,10 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dfs_twitter = []\n",
@@ -89,10 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dfs_news = []\n",
@@ -107,10 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dfs_index = []\n",
@@ -125,10 +109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dfs_stock = []\n",
@@ -146,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -177,67 +159,67 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>2015-01-06</td>\n",
        "      <td>4.0653</td>\n",
        "      <td>37.652221</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>2015-01-07</td>\n",
        "      <td>0.9154</td>\n",
        "      <td>8.877281</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>2015-01-08</td>\n",
        "      <td>1.7150</td>\n",
        "      <td>16.294419</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>2015-01-09</td>\n",
        "      <td>4.6104</td>\n",
        "      <td>34.428163</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>2015-01-12</td>\n",
        "      <td>0.6966</td>\n",
        "      <td>4.554270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>...</td>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>362</td>\n",
+       "      <th>362</th>\n",
        "      <td>2017-06-01</td>\n",
        "      <td>1.3789</td>\n",
        "      <td>11.152696</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>363</td>\n",
+       "      <th>363</th>\n",
        "      <td>2017-08-01</td>\n",
        "      <td>0.7215</td>\n",
        "      <td>7.021072</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>364</td>\n",
+       "      <th>364</th>\n",
        "      <td>2017-09-29</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>365</td>\n",
+       "      <th>365</th>\n",
        "      <td>2017-11-01</td>\n",
        "      <td>0.3612</td>\n",
        "      <td>4.032091</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>366</td>\n",
+       "      <th>366</th>\n",
        "      <td>2017-12-01</td>\n",
        "      <td>0.4898</td>\n",
        "      <td>4.500629</td>\n",
@@ -264,7 +246,7 @@
        "[367 rows x 3 columns]"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,10 +257,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_twitter = reduce(lambda  left,right: pd.merge(left,right,on=['Date'],\n",
@@ -287,10 +267,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_news = reduce(lambda  left,right: pd.merge(left,right,on=['Date'],\n",
@@ -299,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -331,7 +309,7 @@
        "Name: Date, Length: 1088, dtype: int64"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +357,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>363</td>\n",
+       "      <th>363</th>\n",
        "      <td>2016-07-08</td>\n",
        "      <td>3.6317</td>\n",
        "      <td>30.071745</td>\n",
@@ -408,7 +386,7 @@
        "363                -2.6855             -29.170788  "
       ]
      },
-     "execution_count": 266,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,10 +397,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "index_name = [' '+index.split('_')[0] for index in indices]"
@@ -430,10 +406,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_index = reduce(lambda  left,right: pd.merge(left,right,on=['Date'],\n",
@@ -442,10 +416,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Handle Weekends"
@@ -453,10 +425,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "predict_dates = df_stock['Date']"
@@ -464,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +443,7 @@
        "(1088,)"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,10 +454,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#FOR NOW ONLY DELETE THE WEEKENDS\n",
@@ -497,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +474,7 @@
        "(1088, 9)"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +494,7 @@
        "(1088, 9)"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,16 +505,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1088, 17)"
+       "(1088, 19)"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +534,7 @@
        "(1088, 10)"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,10 +545,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_twitter.to_csv(output_dir+'twitter_features.csv', index=False)\n",
@@ -592,9 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -615,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
