--- a/ML.ipynb
+++ b/ML.ipynb
@@ -1581,15 +1581,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores [0.2, 0.6666666666666666, 0.2, 0.7, 0.6666666666666666, 0.5, 0.2222222222222222, 0.4, 0.3, 0.3, 0.5555555555555556, 0.5, 0.8, 0.6, 0.5, 0.5, 0.5555555555555556, 0.4, 0.2222222222222222, 0.5, 0.5, 0.5, 0.2222222222222222, 0.3, 0.2, 0.5555555555555556, 0.4, 0.4, 0.5555555555555556, 0.4, 0.6666666666666666, 0.3, 0.2, 0.3, 0.6666666666666666, 0.3, 0.3, 0.8, 0.6, 0.3, 0.6666666666666666, 0.6, 0.6666666666666666, 0.3, 0.1, 0.5555555555555556, 0.2222222222222222, 0.4, 0.5, 0.4]\n",
-      "Average score 0.4433333333333334\n"
+      "Scores [0.7777777777777778, 0.1, 0.6, 0.5555555555555556, 0.4, 0.4444444444444444, 0.5, 0.5, 0.5, 0.3333333333333333, 0.4, 0.2, 0.5, 0.5, 0.1, 0.0, 0.4, 0.1111111111111111, 0.4, 0.6, 0.5, 0.3333333333333333, 0.2, 0.2, 0.4444444444444444, 0.4, 0.4, 0.6666666666666666, 0.5, 0.5555555555555556, 0.4, 0.4, 0.6, 0.6666666666666666, 0.5, 0.7, 0.5, 0.7, 0.4, 0.7777777777777778, 0.6, 0.5555555555555556, 0.3, 0.7, 0.6666666666666666, 0.5555555555555556, 0.4, 0.5, 0.5]\n",
+      "Average score 0.4600907029478458\n"
      ]
     }
    ],
@@ -1602,11 +1602,11 @@
     "    scores = []\n",
     "    \n",
     "    train_start = datetime.date(2015, 1, 1)\n",
-    "    train_end = (train_start + relativedelta(months=1))\n",
+    "    train_end = (train_start + relativedelta(months=2))\n",
     "    days = calendar.monthrange(train_end.year, train_end.month)[1]\n",
     "    train_end = train_end.replace(day=days)\n",
-    "    test_start = (train_start + relativedelta(months=2)).replace(day=1)\n",
-    "    test_end = (train_start + relativedelta(months=2)).replace(day=14)\n",
+    "    test_start = (train_start + relativedelta(months=3)).replace(day=1)\n",
+    "    test_end = (train_start + relativedelta(months=3)).replace(day=14)\n",
     "    \n",
     "    while train_end < datetime.date(2019, 4, 1):\n",
     "        X_train = X.loc[str(train_start):str(train_end)]\n",
@@ -1620,11 +1620,11 @@
     "        scores.append(model.score(X_test, y_test))\n",
     "        \n",
     "        train_start = (train_start + relativedelta(months=1))\n",
-    "        train_end = (train_start + relativedelta(months=1))\n",
+    "        train_end = (train_start + relativedelta(months=2))\n",
     "        days = calendar.monthrange(train_end.year, train_end.month)[1]\n",
     "        train_end = train_end.replace(day=days)\n",
-    "        test_start = (train_start + relativedelta(months=2)).replace(day=1)\n",
-    "        test_end = (train_start + relativedelta(months=2)).replace(day=14)\n",
+    "        test_start = (train_start + relativedelta(months=3)).replace(day=1)\n",
+    "        test_end = (train_start + relativedelta(months=3)).replace(day=14)\n",
     "    print('Scores',scores)\n",
     "    print('Average score', sum(scores)/len(scores))\n",
     "\n",
